添加 生成含二维码的海报 功能
